--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,10 @@
 <nav>
+  <div class="logo">
+    <img src="eddie.jpg" alt="Logo" />
+  </div>
   <ul>
     <li><a routerLink="home">Accueil</a></li>
     <li><a routerLink="/home">À propos</a></li>
-    <li><a routerLink="/home">Contact</a></li>
+    <li><a routerLink="/listfriend">Liste d'amis</a></li>
   </ul>
 </nav>
