--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -6,5 +6,6 @@
     <li><a routerLink="home">Accueil</a></li>
     <li><a routerLink="/home">À propos</a></li>
     <li><a routerLink="/listfriend">Liste d'amis</a></li>
+    <li><a routerLink="/data-b">Binding System</a></li>
   </ul>
 </nav>
