--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -7,5 +7,6 @@
     <li><a routerLink="/home">À propos</a></li>
     <li><a routerLink="/listfriend">Liste d'amis</a></li>
     <li><a routerLink="/data-b">Binding System</a></li>
+    <li><a routerLink="/directive">Directive</a></li>
   </ul>
 </nav>
