--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,12 +1,14 @@
 <nav>
   <div class="logo">
     <img src="eddie.jpg" alt="Logo" />
+    <img src="eddie4.gif" alt="Logo2" />
   </div>
   <ul>
-    <li><a routerLink="home">Accueil</a></li>
+    <li><a routerLink="">Accueil</a></li>
     <li><a routerLink="/home">À propos</a></li>
     <li><a routerLink="/listfriend">Liste d'amis</a></li>
     <li><a routerLink="/data-b">Binding System</a></li>
     <li><a routerLink="/directive">Directive</a></li>
+    <li><a routerLink="/BlogControlCenterComponent">Blog Control Center</a></li>
   </ul>
 </nav>
