--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,9 @@
-<footer>Footer de dingo</footer>
+<footer>
+  <div class="logo">
+    <img src="eddie6.webp" alt="Logo2" />
+  </div>
+  <h4>
+    “Les pauvres ont si peu de chance que si la merde valait de l'or, ils
+    viendraient au monde sans trou du cul.”
+  </h4>
+</footer>
