--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -3,6 +3,7 @@ nav {
   padding: 15px 0;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
   width: 100%;
+  text-align: center;
 }
 ul {
   list-style: none;
@@ -14,6 +15,6 @@ li a {
   text-decoration: none;
 }
 img {
-  width: 20%;
+  width: 12%;
   border-radius: 50%;
 }
