--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -10,5 +10,6 @@
     <li><a routerLink="/data-b">Binding System</a></li>
     <li><a routerLink="/directive">Directive</a></li>
     <li><a routerLink="/BlogControlCenterComponent">Blog Control Center</a></li>
+    <li><a routerLink="/uselessfact">Useless Fact</a></li>
   </ul>
 </nav>
