ajout firebase + inscription

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -11,5 +11,6 @@
     <li><a routerLink="/directive">Directive</a></li>
     <li><a routerLink="/BlogControlCenterComponent">Blog Control Center</a></li>
     <li><a routerLink="/uselessfact">Useless Fact</a></li>
+    <li><a routerLink="/register">Register</a></li>
   </ul>
 </nav>
