--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -11,6 +11,8 @@
     <li><a routerLink="/directive">Directive</a></li>
     <li><a routerLink="/BlogControlCenterComponent">Blog Control Center</a></li>
     <li><a routerLink="/uselessfact">Useless Fact</a></li>
+    <li><a routerLink="/login">Login</a></li>
     <li><a routerLink="/register">Register</a></li>
+    <li><a routerLink="/userdisplay">User</a></li>
   </ul>
 </nav>
