--- a/src/app/components/data-b/data-b.component.html
+++ b/src/app/components/data-b/data-b.component.html
@@ -28,13 +28,13 @@
   </ng-template>
 
   <button
-    class="btn btn-success ms-5"
+    class="button"
     (click)="onAddingFriends()"
     [disabled]="listFriendsAuth"
   >
     Ajouter Ami
   </button>
-  <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4">
+  <div class="button">
     <app-one-friend></app-one-friend>
   </div>
 </div>
